--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,4 +59,6 @@ dependencies {
 
     //Material
     implementation 'com.google.android.material:material:1.2.0'
+
+    implementation 'com.airbnb.android:lottie:2.5.4'
 }
