--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.pelisyseries"
-        minSdkVersion 16
+        minSdkVersion 19
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
@@ -61,4 +61,6 @@ dependencies {
     implementation 'com.google.android.material:material:1.2.0'
 
     implementation 'com.airbnb.android:lottie:2.5.4'
+
+    implementation 'com.squareup.picasso:picasso:2.5.2'
 }
