--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,4 +64,9 @@ dependencies {
     implementation 'com.airbnb.android:lottie:2.5.4'
 
     implementation 'com.squareup.picasso:picasso:2.5.2'
+
+    // Koin for Kotlin apps
+    implementation "org.koin:koin-core:1.0.1"
+    implementation "org.koin:koin-android-scope:1.0.1"
+    implementation "org.koin:koin-android-viewmodel:1.0.1"
 }
