--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,4 +74,8 @@ dependencies {
     implementation "org.koin:koin-core:1.0.1"
     implementation "org.koin:koin-android-scope:1.0.1"
     implementation "org.koin:koin-android-viewmodel:1.0.1"
+
+    // Navigation
+    implementation "androidx.navigation:navigation-fragment-ktx:2.3.2"
+    implementation "androidx.navigation:navigation-ui-ktx:2.3.2"
 }
